[package]
name = "gjson-bench"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
ajson = "0.2"
criterion = "0.2"
json = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nom = "5"
gjson="0.8"


[[bench]]
name = "ajson_benchmark"
path = "benches/ajson_benchmark.rs"
harness = false